# tts-app

./: .gitignore  Cargo.toml
tts-api/: .env.sample  .gitignore  Cargo.toml  Makefile.toml  ttsapi_config.toml
tts-api/migrations/: 20210302021749_init.sql  20210302105249_user_secret.sql  20210302141357_pk_secret.sql  20210302142818_add_unique.sql
tts-api/src/: config.rs  error.rs  main.rs
tts-api/src/auth/: mod.rs  routes.rs  token.rs
tts-api/src/backend/: mod.rs  openjtalk.rs
tts-api/src/models/: users.rs
tts-api/src/tts/: mod.rs  routes.rs
